# cryptography

./: .gitignore  README.md
cvicenie1/: .gitignore  Makefile  README.md  pyproject.toml
cvicenie1/examples/: sample_run.txt
cvicenie1/report/: report.md
cvicenie1/src/: cipher.py  mappings.py
cvicenie1/tests/: test_cipher.py
cvicenie10/: README.md  main.py  pyproject.toml
cvicenie10/src/: huffman.py  redundant_code.py
cvicenie2/: README.md  TEST_SUMMARY.md  main.py  pyproject.toml
cvicenie2/.github/: copilot_instructions.txt
cvicenie2/_zadanie/: assignment.txt
cvicenie2/src/: entropy.py  polybius.py  xor_utils.py
cvicenie2/tests/: test_entropy.py  test_polybius.py  test_xor.py
cvicenie4/: README.md  main.py
cvicenie4/_zadanie/: ZKGRA_Lab_Work_4_assignment.txt
cvicenie4/src/: modular_arithmetic.py
cvicenie6/: README.md  main.py
cvicenie6/src/: __init__.py  des_tables.py
cvicenie6/zadanie/: Lab6_DES_assignment_transcription.txt
cvicenie7/: main.py
cvicenie7/src/: rijndael.py  rijndael_tables.py
cvicenie8/: README.md  main.py
cvicenie8/src/: rsa.py
cvicenie9/: README.md  main.py
cvicenie9/_zadanie/: assignment.txt
cvicenie9/src/: hash_functions.py  schnorr.py
